<resources>
    <string name="app_name">PsCal</string>
    <string name="inputOne">1</string>
    <string name="inputFour">4</string>
    <string name="divide_by_zero">divide by zero error!</string>
    <string name="inputZero">0</string>
    <string name="cancel">c</string>
    <string name="decimalPoint">.</string>
    <string name="inputThree">3</string>
    <string name="inputSix">6</string>
    <string name="inputFive">5</string>
    <string name="inputNine">9</string>
    <string name="inputEight">8</string>
    <string name="inputSeven">7</string>
    <string name="inputOpenParentheses">(</string>
    <string name="inputCloseParentheses">)</string>
    <string name="inputFactorial">!</string>
    <string name="inputSquared">x^n</string>
    <string name="inputLogarithm">log</string>
    <string name="inputGreatestCommonDiviser">gcd</string>
    <string name="inputBitAnd">and</string>
    <string name="inputBitOr">or</string>
    <string name="inputRightShift"><![CDATA[>>]]></string>
    <string name="inputLeftShift"><![CDATA[<<]]></string>
    <string name="allClear">AC</string>
    <string name="Extend">extend</string>
    <string name="Variable">var</string>
    <string name="inputBitNot">not</string>
    <string name="inputBitXor">xor</string>
    <string name="inputDivision">/</string>
    <string name="inputPlus">+</string>
    <string name="inputModular">mod</string>
    <string name="Cal">=</string>
    <string name="inputTwo">2</string>
    <string name="changeIntFloat">int</string>
    <string name="inputMinus">-</string>
    <string name="inputCombination">nCr</string>
    <string name="inputMultiplication">x</string>
    <string name="ok">확인</string>
    <string name="canc">취소</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LinearDatastructure">선형 자료구조</string>
    <string name="Calculator">계산기</string>
    <string name="Graph">그래프</string>
    <string name="syntax_error">syntax error!</string>
    <string name="val_X"><![CDATA["X -> "]]></string>
    <string name="val_y"><![CDATA["Y -> "]]></string>
    <string name="val_Z"><![CDATA["Z -> "]]></string>
    <string name="val_N"><![CDATA["N -> "]]></string>
    <string name="val_M"><![CDATA["M -> "]]></string>
    <string name="emptyString" />
</resources>
