<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dialogBackground"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/canc"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/ok"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_X"
                android:textColor="@color/dialogText"
                android:textSize="31.5sp" />

            <TextView
                android:id="@+id/y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_y"
                android:textColor="@color/dialogText"
                android:textSize="31.5sp" />

            <TextView
                android:id="@+id/z"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_Z"
                android:textColor="@color/dialogText"
                android:textSize="31.5sp" />

            <TextView
                android:id="@+id/n"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_N"
                android:textColor="@color/dialogText"
                android:textSize="31.5sp" />

            <TextView
                android:id="@+id/m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/val_M"
                android:textColor="@color/dialogText"
                android:textSize="31.5sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/canc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/inputX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="adfasdfads"
                android:inputType="numberDecimal"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="ffff"
                android:inputType="numberDecimal"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputZ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="vdvdv"
                android:inputType="numberDecimal"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="adfasdf"
                android:inputType="numberDecimal"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="ffffff"
                android:inputType="numberDecimal"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <Button
            android:id="@+id/canc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/canc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ok" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>